# authy

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  bazel-authy  bazel-bin  bazel-out  bazel-testlogs  deps.bzl  go.mod
cmd/authy/: BUILD.bazel  authMiddleware.go  authMiddleware_test.go  authenticateRequest.go  authenticateRequest_test.go  nonce.go  nonce_test.go  token.go  token_test.go
cmd/authy-example/: README.md
cmd/authy-example/client/: BUILD.bazel  client.go
cmd/authy-example/server/: BUILD.bazel  healthcheck.go  main.go  server.go
