load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["client.go"],
    importpath = "github.com/ZachGill/authy/cmd/authy-example/client",
    visibility = ["//visibility:private"],
    deps = ["//cmd/authy"],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
