load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = [
        "healthcheck.go",
        "main.go",
        "server.go",
    ],
    importpath = "github.com/ZachGill/authy-example/cmd/authy-example/server",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_zachgill_authy//cmd/authy:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
